# stressum

./: .gitignore  README.md  pyproject.toml  stressum-comparison.json
.cursor/rules/: stressum-python-standards.mdc  stressum-repo-layout.mdc
output/comparison-2026-05-13-101521-406349/: comparison_metadata.json  comparison_summary.csv
output/comparison-2026-05-13-102722-519185/: comparison_metadata.json
output/comparison-2026-05-23-094152-655488/: comparison_metadata.json  comparison_summary.csv
output/comparison-2026-06-05-103948-508792/: comparison_metadata.json  comparison_summary.csv
output/comparison-2026-06-05-110027-914053/: comparison_metadata.json
output/comparison-2026-06-09-170913-729557/: comparison_metadata.json
output/comparison-2026-06-09-171934-489030/: comparison_metadata.json  comparison_summary.csv
output/comparison-2026-06-09-175704-663317/: comparison_metadata.json  comparison_summary.csv
output/comparison-2026-06-10-144559-976947/: comparison_metadata.json  comparison_summary.csv
output/comparison-2026-06-13-133939-720914/: comparison_metadata.json
output/comparison-2026-06-13-134443-246346/: comparison_metadata.json
output/comparison-2026-06-13-142149-915859/: comparison_metadata.json
output/comparison-2026-06-13-153559-549757/: comparison_metadata.json  comparison_summary.csv
output/comparison-2026-06-13-155034-212387/: comparison_metadata.json
stressar-docs/: BENCHMARKING_GUIDE.md  METRICS.md  RESULTS_FORMAT.md
tests/: test_aggregate.py  test_cli.py  test_comparison_plots.py  test_paper.py
(+6750 files in other folders)
