[project]
name = "stressum"
version = "0.1.0"
description = "Compare Stressar result bundles and generate report-oriented comparison tables and figures."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hdrhistogram>=0.10",
    "matplotlib>=3.8",
    "pandas>=2.1",
]

[project.scripts]
stressum = "stressum.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stressum"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
